# memory-dmp-debugger

./: .env.example  .gitignore  ADDITIONAL_FIXES.md  ARCHITECTURE.md  AZURE_AI_SETUP.md  AZURE_EMBEDDINGS_SETUP.md  EVIDENCE_MANAGEMENT.md  EXAMPLE_OUTPUT.md  EXPERT_ARCHITECTURE.md  EXPERT_QUICK_REFERENCE.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  OLLAMA_SETUP.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START_ANALYZERS.md  README.md  SPECIALIZED_ANALYZERS.md  SUMMARY.md  THREAD_ID_REVIEW.md  UV_GUIDE.md  analyze_line9.py  check_file.py  debug_lines.py  dx-commands.txt  find_bad_lines.py  line9_analysis.txt  pyproject.toml  report.md  test_regex.py  test_thread_parse.py
.redaction/: example_patterns.py
docs/: ARCHITECTURE.md  SETUP.md
src/dump_debugger/: __init__.py  analyzer_stats.py  cli.py  config.py  expert_knowledge.py  hypothesis_agent.py  interactive_agent.py  llm.py  llm_azure_ai.py  llm_router.py  token_tracker.py  workflows.py
src/dump_debugger/agents/: __init__.py  critic.py  domain_expert.py  hypothesis.py  interactive_chat.py  investigator.py  planner.py  reasoner.py  report_writer.py
src/dump_debugger/analyzers/: __init__.py  base.py  clrstack.py  do.py  dso.py  dumpheap.py  eeheap.py  finalizequeue.py  gchandles.py  gcroot.py  handle.py  registry.py  syncblk.py  (+2 more)
tests/: conftest.py  test_agents.py  test_command_healer.py  test_debugger.py  test_embedding_redaction.py  test_evidence_retrieval.py  test_interactive_agent_fixes.py  test_iterative_reasoning.py  test_local_only_mode.py  test_placeholder_resolver.py  test_rate_limit_handling.py
(+21 files in other folders)
